--- a/frontend/homepage/package.json
+++ b/frontend/homepage/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
