--- a/frontend/homepage/package.json
+++ b/frontend/homepage/package.json
@@ -10,7 +10,8 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.29.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
