--- a/FillGuardIoT/FillGuard-IoTDevice/platformio.ini
+++ b/FillGuardIoT/FillGuard-IoTDevice/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
+	knolleary/PubSubClient@^2.8
 monitor_speed = 115200
