--- a/frontend/homepage/package.json
+++ b/frontend/homepage/package.json
@@ -21,6 +21,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
