--- a/frontend/homepage/package.json
+++ b/frontend/homepage/package.json
@@ -20,8 +20,10 @@
     "react-router-dom": "^6.29.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
