--- a/IoTBackend/package.json
+++ b/IoTBackend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iotbackend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "mqtt": "^5.10.4",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   }
 }
