--- a/FillGuardIoT/FillGuard-IoTDevice/platformio.ini
+++ b/FillGuardIoT/FillGuard-IoTDevice/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
 	knolleary/PubSubClient@^2.8
+	mikalhart/TinyGPSPlus@^1.1.0
 monitor_speed = 115200
