--- a/FillGuardIoT/FillGuard-IoTDevice2/platformio.ini
+++ b/FillGuardIoT/FillGuard-IoTDevice2/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
 	knolleary/PubSubClient@^2.8
+	mikalhart/TinyGPSPlus@^1.1.0
