--- a/IoTBackend/package.json
+++ b/IoTBackend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.12.1",
     "mqtt": "^5.10.4",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
     "socket.io": "^4.8.1"
   }
 }
